--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
-
 /* Grid CSS */
 #heroGrid {
   margin: 0px 5%;
@@ -10,70 +9,126 @@ body {
   height: 70vh;
   grid-template-rows: 75% 25%;
   grid-template-columns: 75% 25%;
-  grid-template-areas: "featuredProduct secondaryProduct" "featuredProduct CTA";
-
+  grid-template-areas:
+  "featuredProduct secondaryProduct"
+  "featuredProduct CTA";
 }
-
-#featuredProduct {
-  grid-area: featuredProduct;
-  background-image: url("furniture1.png");
-}
-
 #secondaryProduct {
   grid-area: secondaryProduct;
-  background-image: url("furniture2.png");
+  background-image: url("../images/furniture2.png");
 }
-
+#featuredProduct {
+  grid-area: featuredProduct;
+  background-image: url("../images/furniture1.png");
+}
 #CTA {
   grid-area: CTA;
-  justify-content: space-around;  
-  background-image: url("woodbg.png");
+  background-image: url("../images/woodbg.png");
+  justify-content: space-around;
   cursor: pointer;
-}
 
+}
 #headline {
-  background-color: rgba(225, 225, 225, 0.8);
-  border-bottom: 5px solid #FF8222;
+  background-color: rgba(255,255,255,0.8);
+  border-bottom: 5px solid #FF6200;
   position: absolute;
   right: -50px;
-  top: 100px ;
-  padding: 25px ;
+  top: 100px;
+  padding: 25px;
   max-width: 550px;
   z-index: 100;
-
-
 }
-
-
-.heroGridArea{
+.heroGridArea {
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
+  display: flex;
+  position: relative;
 }
 
-/* Category Grid CSS */
+.subHeading {
+  text-align: center;
+  border-bottom: 2px solid black;
+  width: 300px;
+  margin: 50px auto;
+}
+
+#categoryGrid {
+  margin: 0px 5%;
+  display: grid;
+  grid-template-rows: 300px 300px 300px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+  "bookcases bedroom patio"
+  "couches couches patio"
+  "desks desks desks"
+  ;
+}
+
+#bookcases {
+  grid-area: bookcases;
+  background-image: url("../images/bookcases@2x.png");
+}
+  #couches {
+  grid-area: couches;
+  background-image: url("../images/couch@2x.png");
+}
+#desks {
+  grid-area: desks;
+  background-image: url("../images/desks@2x.png");
+}
+#bedroom {
+  grid-area: bedroom;
+  background-image: url("../images/beds@2x.png");
+}
+#patio {
+  grid-area: patio;
+  background-image: url("../images/patio@2x.png");
+}
 
 
+
+.categoryGridArea {
+  margin: 5px;
+  cursor: pointer;
+  display: grid;
+  align-content: end; 
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.heading {
+  background-color: rgba(0,0,0,0.7);
+  padding: 15px;
+  border-bottom: 5px solid #FF6200;
+  height: 25px;
+  color: white;
+  font-size: 18px;
+  }
 
 
 /* Navigation CSS */
 /* CHECK OUT THIS CODE BELOW IF YOU WANT TO GET A REFRESHER ON FLEX */
-#navBar {
-  display: flex;
-  flex-direction: row;
-  margin: 0px 5%;
-}
-#navBar h1 {
-  width: 25%;
-  font-weight: 500;
-}
 #navigation {
   display: flex;
   width: 50%;
   align-items: center;
   justify-content: space-evenly;
 }
+#navBar {
+  display: flex;
+  flex-direction: row;
+  margin: 0px 5%;
+}
 #navigation p {
   cursor: pointer;
   text-decoration: none;
+}
+#navBar h1 {
+  width: 25%;
+  font-weight: 500;
 }
 .icons {
   display: flex;
@@ -90,31 +145,62 @@ body {
   font-weight: 700;
 }
 
-/* Typography CSS */
+/* Typography*/
 
 h2 {
   font-size: 60px;
   margin: 0px 0px;
   color: #FF6200;
 }
-
 h3 {
   font-size: 32px;
   font-weight: 300;
   margin: 0px 0px;
 }
-
 h4 {
   color: white;
   font-weight: 400;
   font-size: 22px;
 }
-
-
 #headline p {
   max-width: 350px;
   font-size: 16px;
   font-weight: 300;
   margin: 0px 0px;
   color: #636364;
+}
+
+@media only screen and (max-width: 1000px) {
+  #navigation {
+    display: none;
+  }  
+  
+  .icons {
+    margin-left: auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #headline {
+    position: static;
+    margin: 20px;
+  }
+
+  #heroGrid {
+    grid-template-areas:
+    "featuredProduct featuredProduct"
+    "secondaryProduct CTA";
+  }
+  
+  #categoryGrid {
+    grid-template-rows: 300px 300px 300px 300px 300px;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "bookcases"
+      "bedroom"
+      "patio"
+      "couches"
+      "desks"
+    ;
+  }
 }
